<resources>
    <string name="titleHome">Home</string>
    <string name="titleAdList">Ad List</string>
    <string name="titleSettings">Settings</string>
    <string name="titleAbout">About</string>
    <string name="settingsBatteryWarningTitle">Accurate notifications</string>
    <string name="settingsBatteryWarningSummary">Allow Notificoin to run in the background to get notifications on time</string>
    <string name="adListConnectionErrorMessage">There was an error while trying to get new ads from the website, check your connection, the url of your searches and retry</string>
    <string name="adListParsingErrorMessage">Unable to parse the webpage, check the url of your searches</string>
    <string name="adListForbiddenErrorMessage">You have made too many requests and Leboncoin detected that you were a robot, check for new ads less often in Settings or click here to try to fix this problem</string>
    <string name="adListForbiddenFixMessage">"Chrome not found, go to \"www.leboncoin.fr\" from your mobile's browser to fix this problem"</string>
    <string name="adListUnknownErrorMessage">Unknown error while getting ads from the website</string>
    <string name="channelName">notificoin</string>
    <string name="channelDescription">channel for the app NotifiCoin</string>
    <string name="koinAlreadyStarted">Koin already started, skipping startKoin</string>
    <string name="OK">OK</string>
    <string name="alertDialogStopAsking">Stop asking</string>
    <string name="alertDialogMaybeLater">Maybe later</string>
    <string name="editThisSearch">Edit this search</string>
    <string name="editSearchUrlHint">https://www.leboncoin.fr/recherche…</string>
    <string name="EditSearchTitleHint">Your title</string>
    <string name="editSearchTitle">Title</string>
    <string name="editSearchUrl">Url of the search from Leboncoin</string>
    <string name="titleEditSearch">Edit your search</string>
    <string name="editSearchSaveButton">save</string>
    <string name="editSearchDeleteButton">delete</string>
    <string name="dragYourSearch">drag your search</string>
    <string name="createNewSearch">Create a new search</string>
    <string name="homeFragmentRecyclerViewTitleText">Your searches :</string>
    <string name="homeFragmentSearchDeleted">Search deleted</string>
    <string name="undo">Undo</string>
    <string name="adViewHolderprice">%s €</string>
    <string name="settingsNotificationIntervalSummary">Choose how often you want to check for new ads</string>
    <string name="settingsNotificationIntervalTitle">Check for new ads :&#160;</string>
    <string name="adListEmpty">No ads found, check the url of your searches or try to add new ones</string>
    <string name="adListImageViewContentDescription">sad duck</string>
    <string name="edtiSearchInvalidUrlError">Url is not valid, it should respect the pattern : https://www.leboncoin.fr/recherche…</string>
    <string name="editSearchNotASearchUrlError">Url is from leboncoin but is not a search, it should respect the pattern : https://www.leboncoin.fr/recherche…</string>
    <string name="aboutAppDescription">This app was made voluntarily during my free time, it does not represent nor have any affiliation with Leboncoin.fr</string>
    <string name="aboutConnectWithUsGroup">Connect with us</string>
    <string name="aboutEmail" translatable="false">notificoin@gmail.com</string>
    <string name="aboutPackageName" translatable="false">com.github.corentinc.notificoin</string>
    <string name="aboutGithubId" translatable="false">corentin-c</string>
    <string name="aboutEmailTitle">Email us</string>
    <string name="aboutGithubTitle">On Github</string>
    <string name="aboutDevelopedWith">Developed with</string>
    <string name="aboutKoin" translatable="false">Koin</string>
    <string name="aboutFlipper" translatable="false">Flipper</string>
    <string name="aboutGlide" translatable="false">Glide</string>
    <string name="aboutAndroidAboutPage" translatable="false">Android About Page</string>
    <string name="aboutBubbleView" translatable="false">BubbleView</string>
    <string name="homeEmptySearch">You have no search yet, you can add one by clicking on the yellow button just bellow</string>
    <string name="EditSearchUrlInfoButtonContentDescription">Where to find this url</string>
    <string name="editSearchUrlHelpBubble">Click here to open Leboncoin on Chrome, then go to your search to copy the url</string>
    <string name="batteryWarningDetectedSpecialConstructor">The constructor of your phone is also using a special app to manage battery, allow NotifiCoin to run in the background in this app</string>
    <string name="batteryWarningDetectedHuawei">HUAWEI is also using a special app to manage battery, disable automatic battery management for Notificoin and allow everything manually</string>
    <string name="appName">NotifiCoin</string>
</resources>
